# full_todotxt

./: .gitignore  MANIFEST.in  Makefile  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: main.yaml
full_todotxt/: __init__.py  __main__.py  todo.py
