[project]
name = "full_todotxt"
version = "0.2.4"
description = "todotxt interactive interface that forces you to specify attributes"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10"
keywords = ["todotxt", "todo.txt", "todo"]
classifiers = [
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dependencies = [
  "autotui>=0.4.6",
  "click>=8.0.0",
  "dateparser>=1.1.0",
  "prompt-toolkit>=3.0.5",
  "pytodotxt>=1.5.0",
]
[[project.authors]]
name = "purarue"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.scripts]
full_todotxt = "full_todotxt.__main__:cli"

[project.urls]
Homepage = "https://github.com/purarue/full_todotxt"

[project.optional-dependencies]
testing = ["flake8", "mypy"]

[tool.mypy]
pretty = true
show_error_context = true
show_error_codes = true
check_untyped_defs = true
namespace_packages = true
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true

[tool.pytest.ini_options]
addopts = []

[tool.setuptools.packages.find]
include = ["full_todotxt"]
exclude = []
